[package]
name = "mapgen"
version = "0.1.0"
authors = ["Kiëd Llaentenn <kiedtl@tilde.team>"]
edition = "2018"

[dependencies]
# random number generation,
# used heavily during map generation
rand = "0.7.0"

# used for parsing the dungeon
# info file
serde = "1.0.0"
ron = "0.6.0"

# used to traverse data directories and get
# item definitions
walkdir = "2"

# Perlin/OpenSimplex noise generator used for
# making clusters/"veins" of minerals
[dependencies.noise]
version = "0.6.0"
default-features = false

# used for the Saturating* traits
# just to make my short life easier
[dependencies.num]
version = "0.3.0"

[dependencies.lib]
path = "../lib"
